# openilc

./: .gitignore  CHANGELOG.rst  LICENSE  MAINTAINERS  README.md  README_zh.md  bandinfo.csv  bandinfo_beam.csv  cpr_ilc.py  hilc.py  nilc.py  nilc_alm.py  nilc_v1_1.py  pyproject.toml  test_ilc_bias.py  test_nilc.py  test_nilc_beam.py
configs/: bands.csv  bands_beam.csv  beam.yaml  default.yaml  needlets_beam.csv  needlets_default.csv
data/cmb/: cmbcl_8k.npy
needlets/: beam_version.csv  default.csv
openilc/: __init__.py  configs.py  nilc.py  sht.py
tests/: test_package.py
tutorials/: __init__.py  sim_data.py  tutorial_cpr_ilc.py  tutorial_ilc_bias.py  tutorial_nilc.py  tutorial_nilc_beam.py  tutorial_sht_backend.py
